# FeCl

./: .gitignore  .travis.yml  Archive.h  CMakeLists.txt  Code.cpp  Code.h  Doxyfile  ErrorCorrectingCode.h  ErrorCorrectingCode.prj  ForwardErrorCorrection.prj  LICENSE  README.md  _bit_field_8h_source.html  _bit_matrix_8h_source.html  _bp_decoder_8h_source.html  _bp_decoder_impl_8h_source.html  _code_8h_source.html  _code_structure_8h_source.html  _codec_8h_source.html  _convolutional_8h_source.html  _convolutional_code_8h_source.html  _convolutional_code_structure_8h_source.html  _interleaver_8h_source.html  _ldpc_8h_source.html  _ldpc_code_8h_source.html  _ldpc_code_structure_8h_source.html  _linear_table_8h_source.html  _llr_metrics_8h_source.html  _log_map_8h_source.html  _map_decoder_8h_source.html  _map_decoder_impl_8h_source.html  _max_log_map_8h_source.html  _min_sum_bp_8h_source.html  _serialization_8h_source.html  _trellis_8h_source.html  _trellis_structure_8h_source.html  _true_bp_8h_source.html  _turbo_8h_source.html  _turbo_code_8h_source.html  _turbo_code_impl_8h_source.html  (+143 more)
+fec/: CMakeLists.txt  ForwardErrorCorrection.prj  MapType.m  MexAllocator.h  MexBitField.h  MexBitMatrix.h  MexConversion.h  MexHandle.h  MexInterleaver.h  MexObject.m  MexTrellis.h  Permutation.m  SchedulingType.m  StructureType.m  TerminationType.m  Trellis.m  TrellisEndType.m  WrapFcnId.m  export.h  fec_wrap.cpp  make.m  mexFunction.map  mxArrayToBitMatrix.h  mxArrayToInterleaver.h  mxArrayToTrellis.h  wrap.cpp  wrap.h
+fec/+Codec/: DecoderAlgorithm.m
+fec/+Convolutional/: DecoderOptions.m  EncoderOptions.m  PunctureOptions.m  Structure.m
+fec/+Ldpc/: DecoderOptions.m  EncoderOptions.m  Structure.m
+fec/+Turbo/: BitOrdering.m  DecoderOptions.m  EncoderOptions.m  PermuteOptions.m  PunctureOptions.m  Structure.m
+fec/+example/: ConvolutionalCode.m  LdpcCode.m  TurboCode.m  operation.m
+fec/+performance/: all.m  decode.m  encode.m  fecDecode.m  matlabDecode.m  matlabEncode.m  per.m  speed.m
+fec/+test/: all.m
+fec/@Code/: Code.m  Code_appDecode.cpp  Code_decode.cpp  Code_destructor.cpp  Code_encode.cpp  Code_get_extrinsicMsgSize.cpp  Code_get_extrinsicParitySize.cpp  Code_get_extrinsicSize.cpp  Code_get_msgSize.cpp  Code_get_paritySize.cpp  Code_get_workGroupSize.cpp  Code_load.cpp  Code_parityAppDecode.cpp  Code_save.cpp  Code_set_workGroupSize.cpp  Code_softOutDecode.cpp
+fec/@Codec/: Codec.m  Codec_decode.cpp  Codec_destroy.cpp  Codec_encode.cpp  Codec_get_msgSize.cpp  Codec_get_paritySize.cpp  Codec_get_stateSize.cpp  Codec_get_systSize.cpp  Codec_get_workGroupSize.cpp  Codec_load.cpp  Codec_save.cpp  Codec_set_workGroupSize.cpp  Codec_soDecode.cpp
+fec/@Convolutional/: Convolutional.m  ConvolutionalCode.m  Convolutional_constructor.cpp  Convolutional_createPermutation.cpp  Convolutional_get_decoderOptions.cpp  Convolutional_set_decoderOptions.cpp  Convolutional_set_encoderOptions.cpp  MexDecoderOptions.h  MexEncoderOptions.h  MexPunctureOptions.h
+fec/@ConvolutionalCode/: ConvolutionalCode.m  ConvolutionalCode_constructor.cpp
+fec/@Ldpc/: Ldpc.m  Ldpc_constructor.cpp  Ldpc_get_decoderOptions.cpp  Ldpc_set_decoderOptions.cpp  Ldpc_set_encoderOptions.cpp  MexDecoderOptions.h  MexEncoderOptions.h
+fec/@LdpcCode/: LdpcCode.m  LdpcCode_constructor.cpp  LdpcCode_get_iterationCount.cpp  LdpcCode_set_iterationCount.cpp
+fec/@Trellis/: Trellis_constructor.cpp
+fec/@Turbo/: MexDecoderOptions.h  MexEncoderOptions.h  MexPermuteOptions.h  MexPunctureOptions.h  Turbo.m  Turbo_constructor.cpp  Turbo_createPermutation.cpp  Turbo_get_decoderOptions.cpp  Turbo_set_decoderOptions.cpp  Turbo_set_encoderOptions.cpp
+fec/@TurboCode/: TurboCode.m  TurboCode_constructor.cpp  TurboCode_get_iterationCount.cpp  TurboCode_set_iterationCount.cpp
+fec/cmake/: FindMatlab.cmake
+fec/util/: MexAllocator.h  MexBitField.h  MexBitMatrix.h  MexConversion.h  MexHandle.h  MexInterleaver.h  MexPermutation.h  MexSaveLoad.h  MexTrellis.h
CMake/: CMakeLists.txt
Matlab/: BlocEndType.m  CMakeLists.txt  ErrorCorrectingCodeBuild.m  ErrorCorrectingCodeDemo.m  MexAllocator.h  MexConversion.h  ecc_export.h  mxArrayToBitMatrix.h  mxArrayToInterleaver.h  mxArrayToTrellis.h  nullHandle.cpp
Matlab/+fec/: PuncturedConvolutional.m  PuncturedLdpc.m  PuncturedTurbo.m  WrapFcnId.m  make.m
Matlab/@ConvolutionalCode/: ConvolutionalCode.m  ConvolutionalCode_constructor.cpp
Matlab/@ErrorCorrectingCode/: ErrorCorrectingCode.m  ErrorCorrectingCode.m~  ErrorCorrectingCode_appDecode.cpp  ErrorCorrectingCode_decode.cpp  ErrorCorrectingCode_destructor.cpp  ErrorCorrectingCode_encode.cpp  ErrorCorrectingCode_get_extrinsicMsgSize.cpp  ErrorCorrectingCode_get_extrinsicParitySize.cpp  ErrorCorrectingCode_get_extrinsicSize.cpp  ErrorCorrectingCode_get_messageSize.cpp  ErrorCorrectingCode_get_msgSize.cpp  ErrorCorrectingCode_get_paritySize.cpp  ErrorCorrectingCode_load.cpp  ErrorCorrectingCode_parityAppDecode.cpp  ErrorCorrectingCode_save.cpp  ErrorCorrectingCode_softOutDecode.cpp
Matlab/@LdpcCode/: LdpcCode.m  LdpcCode_constructor.cpp
Matlab/@TurboCode/: TurboCode.m  TurboCode_constructor.cpp
Matlab/cmake/: FindMatlab.cmake
Matlab/def/: doxygen.def
Matlab/html/: _09_convolutional_2_decoder_options_8m.html  _09_convolutional_2_decoder_options_8m_source.html  _09_convolutional_2_encoder_options_8m.html  _09_convolutional_2_encoder_options_8m_source.html  (+246 more)
benchmark/: CMakeLists.txt  benchmarkCppResult.json  benchmarkMatlabResult.json
src/: BitField.h  BitMatrix.h  BitOrdering.h  CMakeLists.txt  Code.cpp  Code.h  Codec.cpp  Codec.h  Convolutional.cpp  Convolutional.h  DecoderAlgorithm.h  Doxyfile  DvbS2.cpp  ErrorCorrectingCode.cpp  ErrorCorrectingCode.h  Ldpc.cpp  Ldpc.h  LinearTable.h  Lte3Gpp.cpp  Modulation.cpp  Modulation.h  Permutation.h  PuncturedConvolutional.h  PuncturedLdpc.h  PuncturedTurbo.h  SchedulingType.h  Serialization.h  Trellis.cpp  Trellis.h  Turbo.cpp  Turbo.h
test/: CMakeLists.txt  code.cpp  test_appDecode.m  test_decode.m  test_ecc.cpp  test_fec.cpp  test_fec.m  test_softOutDecode.m
(+2101 files in other folders)
